--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>con hojas en blanco para empezar el trabajo </strong>
+    <strong>con hojas en blanco para empezar el proyecto</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
