--- a/src/app/bienvenida/bienvenida.page.html
+++ b/src/app/bienvenida/bienvenida.page.html
@@ -1,9 +1,57 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>bienvenida</ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar color="secondary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Bienvenida  
+      <ion-label Position="floating"><h6>Maria</h6></ion-label>
+    </ion-title>
+    <ion-title slot="end">
+      <ion-icon [routerLink]="['/login']"name="person-outline"></ion-icon>  
+    </ion-title>
+
+  
   </ion-toolbar>
 </ion-header>
+<ion-content [fullscreen]="true">
+  <ion-card  >
+    <ion-card-title horizontal="center">
+    </ion-card-title>
+    <ion-list [inset]="true" lines="none">
+      <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" lines="none">
+        <ion-accordion>
+          <ion-item slot="header"  color="secondary">
+            <ion-thumbnail slot="start">
+              <ion-img [src]=""></ion-img>
+            </ion-thumbnail>
+            <ion-label></ion-label>
+          </ion-item>
 
-<ion-content>
-
+          <div class="ion-padding" slot="content">
+            <ion-item>
+              <ion-col>
+                <ion-label>Marca:</ion-label>
+                <ion-label>Modelo:</ion-label>
+                <ion-label>Año:</ion-label>
+              </ion-col>
+              <ion-col>
+                <ion-label></ion-label>
+                <ion-label></ion-label>
+                <ion-label></ion-label>
+              </ion-col>
+              <ion-button color="warning" size="small"><ion-icon name="create-outline"></ion-icon>
+              </ion-button>
+              <ion-button color="danger" size="small"><ion-icon name="trash-outline"></ion-icon></ion-button>
+            </ion-item>
+          </div>
+        </ion-accordion>
+      </ion-accordion-group>
+    </ion-list>
+  </ion-card>
+  <ion-fab horizontal="center">
+    <ion-fab-button [routerLink]="" color="secondary"> <!--BTN AGREGAR-->
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
