--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title>homeapp</ion-title>
+    <ion-title [routerLink]="['/bienvenida']">HomeApp</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,27 +12,27 @@
   </ion-card-header>
   <ion-card-content>
     
-    <form>
+    <form >
       <ion-item>
     <ion-label Position="floating">Nombre</ion-label>
-    <ion-input formControlName="nombre"></ion-input>
+    <ion-input ></ion-input>
     </ion-item>
     <ion-item>
       <ion-label Position="floating">Contraseña</ion-label>
-      <ion-input formControlName="pass" type="password"></ion-input>
+      <ion-input  type="password"></ion-input>
       </ion-item>
     </form>
     <br>
-  <ion-button color="secondary">Ingresar</ion-button>
+  <ion-button >Ingresar</ion-button>
  
   </ion-card-content>
 </ion-card>
  
-<!-- <ion-card> 
+<ion-card> 
   <ion-card>
-<ion-img [src]="img"></ion-img>
+<ion-img ></ion-img>
 </ion-card>
-</ion-card>  -->
+</ion-card> 
 </ion-content>
 <ion-footer>
   <ion-toolbar color="secondary">
