--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Registro</ion-title>
+    <ion-title>HomeApp</ion-title>
   </ion-toolbar>
 </ion-header>
 
