--- a/src/app/bienvenida/bienvenida.page.html
+++ b/src/app/bienvenida/bienvenida.page.html
@@ -15,6 +15,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
+  <ion-searchbar color="secondary" class="search" mode="ios" placeholder="Buscar Direccion"></ion-searchbar>
   <ion-card  >
     <ion-card-title horizontal="center">
     </ion-card-title>
