--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,7 +23,7 @@
       </ion-item>
     </form>
     <br>
-  <ion-button >Ingresar</ion-button>
+  <ion-button  [routerLink]="['/bienvenida']">Ingresar</ion-button>
  
   </ion-card-content>
 </ion-card>
