--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,23 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+
+
+<ion-header>
+  <ion-toolbar color="secondary">
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>con hojas en blanco para empezar el proyecto</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+ 
+  <ion-card>
+    <ion-img src="assets/icon/logo2.png"></ion-img>
+    <ion-card-content>
+   
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col>
+            <ion-button color="secondary" [routerLink]="['/login']"   expand="block" shape="round" ><ion-icon slot="start" name="people-outline"></ion-icon>Usuario</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
