--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,38 +1,34 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title [routerLink]="['/bienvenida']">HomeApp</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Usuario</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Iniciar Sesión</ion-card-title>
-  </ion-card-header>
-  <ion-card-content>
-    
-    <form >
-      <ion-item>
-    <ion-label Position="floating">Nombre</ion-label>
-    <ion-input ></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label Position="floating">Contraseña</ion-label>
-      <ion-input  type="password"></ion-input>
-      </ion-item>
-    </form>
-    <br>
-  <ion-button  [routerLink]="['/bienvenida']">Ingresar</ion-button>
- 
-  </ion-card-content>
-</ion-card>
- 
-<ion-card> 
   <ion-card>
-<ion-img ></ion-img>
-</ion-card>
-</ion-card> 
+    <ion-card-header>
+      <ion-card-title>Inicia sesion</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <form>
+        <ion-item>
+          <ion-label Position="floating">Direccion de correo</ion-label>
+          <ion-input ></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label Position="floating">Contraseña</ion-label>
+          <ion-input  type="password"></ion-input>
+        </ion-item>
+      </form>
+      <br>
+      <ion-button color="secondary" expand="block" shape="round" >Ingresar</ion-button>
+      <ion-img src="assets/icon/logo3.png"></ion-img>
+    </ion-card-content>
+   
+  </ion-card>
+
 </ion-content>
 <ion-footer>
   <ion-toolbar color="secondary">
