--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -3,32 +3,39 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>HomeApp</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Registro</ion-card-title>
+      <ion-card-title>Ingresa tus datos</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <form>
+      <form [formGroup]="formularioRegistro" (keyup.enter)="guardar()">
         <ion-item>
-          <ion-label position="floating">Nombre</ion-label>
-          <ion-input ></ion-input>
+          <ion-label position="floating">Nombre Completo</ion-label>
+          <ion-input formControlName="nombre" ></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Direccion de correo</ion-label>
+          <ion-input formControlName="mail"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">telefono (opcional) </ion-label>
+          <ion-input formControlName="telefono"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Contraseña</ion-label>
-          <ion-input type="password" ></ion-input>
+          <ion-input formControlName="pass" type="password" ></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Confirmar contraseña</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input formControlName="confirmacion" type="password"></ion-input>
         </ion-item>
         <br>
-        <ion-button color="secondary">Registrarse
-        </ion-button>
+        <ion-button color="secondary" expand="block" shape="round" (click)="guardar()" >Registrarse</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
