--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -21,7 +21,8 @@
         <br>
         <ion-item fill="outline">
           <ion-label position="floating">Direccion de correo</ion-label>
-          <ion-input formControlName="mail" type="email" placeholder="email@ejemplo.com" ></ion-input>
+        
+          <ion-input formControlName="mail" type="email"  placeholder="ejemplo@dominio.cl" ngModel email></ion-input>
         </ion-item >
         <br>
         <ion-item fill="outline">
