--- a/src/app/addpropiedad/addpropiedad.page.html
+++ b/src/app/addpropiedad/addpropiedad.page.html
@@ -1,9 +1,42 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>addpropiedad</ion-title>
+  <ion-toolbar color="secondary">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Propiedad</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Agrega una propiedad</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <form>
+        
+          <ion-item >
+            <ion-label position="floating">Nombre Propiedad</ion-label>
+            <ion-input  placeholder="casa_ejemplo" ></ion-input>
+          </ion-item >
+        <ion-item >
+          <ion-label position="floating">Direccion</ion-label>
+          <ion-input   placeholder="av. ejemplo" ></ion-input>
+        </ion-item >
+        <ion-item >
+          <ion-label position="floating">Numero </ion-label>
+          <ion-input  type="number" placeholder="000"></ion-input>
+        </ion-item>
+        <ion-item >
+          <ion-label position="floating">region</ion-label>
+          <ion-input ></ion-input>
+        </ion-item >
+        <ion-item >
+          <ion-label position="floating">comuna</ion-label>
+          <ion-input ></ion-input>
+        </ion-item >
+        <ion-button color="secondary" expand="block" shape="round"  >Registrarse</ion-button>
+      </form>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
