--- a/src/app/addpropiedad/addpropiedad.page.html
+++ b/src/app/addpropiedad/addpropiedad.page.html
@@ -14,27 +14,49 @@
     </ion-card-header>
     <ion-card-content>
       <form>
-        
-          <ion-item >
-            <ion-label position="floating">Nombre Propiedad</ion-label>
-            <ion-input  placeholder="casa_ejemplo" ></ion-input>
-          </ion-item >
-        <ion-item >
-          <ion-label position="floating">Direccion</ion-label>
-          <ion-input   placeholder="av. ejemplo" ></ion-input>
-        </ion-item >
-        <ion-item >
-          <ion-label position="floating">Numero </ion-label>
-          <ion-input  type="number" placeholder="000"></ion-input>
-        </ion-item>
-        <ion-item >
-          <ion-label position="floating">region</ion-label>
-          <ion-input ></ion-input>
-        </ion-item >
-        <ion-item >
-          <ion-label position="floating">comuna</ion-label>
-          <ion-input ></ion-input>
-        </ion-item >
+          
+
+          <ion-grid [fixed]="true">
+          <ion-row> 
+            <ion-col  ><ion-item >
+              <ion-label position="floating">Nombre Propiedad</ion-label>
+                 <ion-input  placeholder="casa_ejemplo" ></ion-input>
+         </ion-item ></ion-col>   
+          <ion-col size="auto" >
+            <ion-item >
+              <ion-label position="floating">Direccion</ion-label>
+              <ion-input   placeholder="av. ejemplo" ></ion-input>
+            </ion-item >
+  </ion-col>
+  <ion-col >
+    <ion-item>
+      <ion-label position="floating">Numero </ion-label>
+      <ion-input  type="number" placeholder="000"></ion-input>
+</ion-item>
+</ion-col>
+<ion-col><ion-item>
+  <ion-select label="Popover"  interface="popover" placeholder="Comuna">
+    <ion-select-option value="Santiago">Santiago</ion-select-option>     
+    <ion-select-option value="Huechuraba">Huechuraba</ion-select-option>  
+    <ion-select-option value="Independencia">Independencia</ion-select-option>  
+    <ion-select-option value="Quilicura">Quilicura</ion-select-option>  
+    <ion-select-option value="Recoleta">Recoleta</ion-select-option>  
+    <ion-select-option value="Renca">Renca</ion-select-option>  
+    <ion-select-option value="Las Condes">Las Condes</ion-select-option>   
+    <ion-select-option value="Lo Barnechea">Lo Barnechea</ion-select-option>  
+    <ion-select-option value="Providencia">Providencia</ion-select-option>   
+    <ion-select-option value="Vitacura">Vitacura</ion-select-option>   
+    <ion-select-option value="La Reina">La Reina</ion-select-option>   
+    <ion-select-option value="Macul">Macul</ion-select-option>   
+    <ion-select-option value="Conchalí">Conchalí</ion-select-option> 
+  </ion-select>
+</ion-item></ion-col>
+
+</ion-row>
+</ion-grid>
+
+             
+            
         <ion-button color="secondary" expand="block" shape="round"  >Registrarse</ion-button>
       </form>
     </ion-card-content>
