--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -6,7 +6,6 @@
     <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-card>
     <ion-card-header>
@@ -14,33 +13,27 @@
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="formularioRegistro" (keyup.enter)="guardar()">
-        <ion-item fill="outline">
+        <ion-item>
           <ion-label position="floating">Nombre Completo</ion-label>
-          <ion-input formControlName="nombre" ></ion-input>
+          <ion-input formControlName="nombre"></ion-input>
         </ion-item>
-        <br>
-        <ion-item fill="outline">
+        <ion-item>
           <ion-label position="floating">Direccion de correo</ion-label>
-        
-          <ion-input formControlName="mail" type="email"  placeholder="ejemplo@dominio.cl" ngModel email></ion-input>
-        </ion-item >
-        <br>
-        <ion-item fill="outline">
+          <ion-input formControlName="mail" type="email" placeholder="ejemplo@dominio.cl" ngModel email></ion-input>
+        </ion-item>
+        <ion-item>
           <ion-label position="floating">telefono (opcional) </ion-label>
           <ion-input formControlName="telefono" type="tel" placeholder="+56 900000000"></ion-input>
         </ion-item>
-        <br>
-        <ion-item fill="outline">
+        <ion-item>
           <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="pass" type="password" ></ion-input>
+          <ion-input formControlName="pass" type="password"></ion-input>
         </ion-item>
-        <br>
-        <ion-item fill="outline">
+        <ion-item>
           <ion-label position="floating">Confirmar contraseña</ion-label>
           <ion-input formControlName="confirmacion" type="password"></ion-input>
-        </ion-item >
-        <br>
-        <ion-button color="secondary" expand="block" shape="round" (click)="guardar()" >Registrarse</ion-button>
+        </ion-item>
+        <ion-button color="secondary" expand="block" shape="round" (click)="guardar()">Registrarse</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
