--- a/src/app/addpropiedad/addpropiedad.page.html
+++ b/src/app/addpropiedad/addpropiedad.page.html
@@ -13,30 +13,30 @@
       <ion-card-title>Agrega una propiedad</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <form [formGroup]="form_add_home" (keyup.enter)="guardar()">
+      <form [formGroup]="formularioHogar" (keyup.enter)="guardar()">
         <ion-grid [fixed]="true">
           <ion-row>
             <ion-col size="auto"><ion-item>
                 <ion-label position="floating">Nombre Propiedad</ion-label>
-                <ion-input formControlName="nombre_home" placeholder="casa_ejemplo"></ion-input>
+                <ion-input formControlName="nombre_hogar" placeholder="casa_ejemplo"></ion-input>
               </ion-item></ion-col>
             <ion-col size="auto">
               <ion-item>
                 <ion-label position="floating">Direccion</ion-label>
-                <ion-input formControlName="Direcion_home"placeholder="av. ejemplo"></ion-input>
+                <ion-input formControlName="direccion_hogar"placeholder="av. ejemplo"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
                 <ion-label position="floating">Numero </ion-label>
-                <ion-input formControlName="num_home" type="number" placeholder="000"></ion-input>
+                <ion-input formControlName="num_hogar" type="number" placeholder="000"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
         </ion-grid>
         
         <ion-item>
-          <ion-select formControlName="comuna_home" label="Popover" interface="popover" placeholder="Comuna">
+          <ion-select formControlName="comuna_hogar" label="Popover" interface="popover" placeholder="Comuna">
             <ion-select-option value="Santiago">Santiago</ion-select-option>
             <ion-select-option value="Huechuraba">Huechuraba</ion-select-option>
             <ion-select-option value="Independencia">Independencia</ion-select-option>
@@ -54,15 +54,15 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Contacto</ion-label>
-          <ion-input formControlName="contacto_home" placeholder="ejemplo nombre arrendatario"></ion-input>
+          <ion-input formControlName="contacto_hogar" placeholder="ejemplo nombre arrendatario"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">telefono (opcional) </ion-label>
-          <ion-input formControlName="telefono_home" type="tel" placeholder="+56 900000000"></ion-input>
+          <ion-input formControlName="telefono_hogar" type="tel" placeholder="+56 900000000"></ion-input>
         </ion-item>
 
 
-        <ion-button color="secondary" expand="block" shape="round">Registrarse</ion-button>
+        <ion-button color="secondary" expand="block" shape="round" (click)="guardar()">Registrarse</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
