temporal para listar

--- a/src/app/bienvenida/bienvenida.page.html
+++ b/src/app/bienvenida/bienvenida.page.html
@@ -23,12 +23,12 @@
             <ion-label></ion-label>
           </ion-item>
 
-          <div class="ion-padding" slot="content">
+          <div class="ion-padding" slot="content" >
             <ion-item>
               <ion-col>
-                <ion-label>Marca:</ion-label>
-                <ion-label>Modelo:</ion-label>
-                <ion-label>Año:</ion-label>
+                <ion-label>Nombre:</ion-label>
+                <ion-label>Direccion:</ion-label>
+                <ion-label>numero:</ion-label>
               </ion-col>
               <ion-col>
                 <ion-label></ion-label>
