--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-split-pane contentId="main">
+
+    <ion-menu contentId="main" menuId="principal">
+      <ion-header >
+        <ion-toolbar color="secondary">
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-menu-toggle autoHide="false"> 
+        <ion-item button="true" detail="true" [routerLink]="['/set-propiedad']">
+        <ion-label>Editar propiedad</ion-label>
+        <ion-icon slot="start"  name="create"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      </ion-content>
+    </ion-menu>
+  
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
