--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -60,7 +60,7 @@
         </ion-item>
 
 
-        <ion-button color="secondary" expand="block" shape="round" >Registrarse</ion-button>
+        <ion-button (click)="guardarPropiedad()" color="secondary" expand="block" shape="round" >Guardar</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
