--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -18,12 +18,28 @@
    
             <ion-item>
                 <ion-label position="floating">Nombre Propiedad</ion-label>
-                <ion-input [(ngModel)]="nombre"  placeholder="casa_ejemplo" type="text" inputmode="text"></ion-input>
+                <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="casa_ejemplo" type="text" inputmode="text"></ion-input>
               </ion-item>
               
               <ion-item>
                 <ion-label position="floating">Direccion</ion-label>
-                <ion-input [(ngModel)]="direccion"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
+                <ion-input [(ngModel)]="newPropiedad.direccion"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">numero</ion-label>
+                <ion-input [(ngModel)]="newPropiedad.numero"  placeholder="av. ejemplo"type="number" inputmode="numeric"> </ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">comuna</ion-label>
+                <ion-input [(ngModel)]="newPropiedad.comuna"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">contacto</ion-label>
+                <ion-input [(ngModel)]="newPropiedad.contacto"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Telefono</ion-label>
+                <ion-input [(ngModel)]="newPropiedad.telefono"  placeholder="av. ejemplo" type="number" inputmode="numeric"> </ion-input>
               </ion-item>
    
         <ion-button (click)="guardarPropiedad()" color="secondary" expand="block" shape="round" >Guardar</ion-button>
