--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -43,7 +43,13 @@
               </ion-item>
    
         <ion-button (click)="guardarPropiedad()" color="secondary" expand="block" shape="round" >Guardar</ion-button>
+    <ion-item *ngFor="let P of Propiedades">
+      <ion-label>{{P.nombre}}</ion-label>
+      <ion-button color="warning" size="small"><ion-icon name="create-outline"></ion-icon>
+      </ion-button>
+      <ion-button color="danger" size="small"><ion-icon name="trash-outline"></ion-icon></ion-button>
     
+    </ion-item>
     </ion-card-content>
   </ion-card>
 </ion-content>
