--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -64,18 +64,35 @@
    
         <ion-button (click)="guardarPropiedad()" color="secondary" expand="block" shape="round" >Guardar</ion-button>
       </div>
+    <!--listas de propiedades Cascada-->
+       <ion-list [inset]="true" lines="none">
+      <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" lines="none">
+        <ion-accordion *ngFor="let P of Propiedades">
+          <ion-item slot="header"  color="secondary">
+            
+            <ion-label>{{P.nombre}}</ion-label>
+          </ion-item>
 
-     <!--listas de propiedades-->
-        <ion-item *ngFor="let P of Propiedades">
-    
-      <ion-label>{{P.nombre}}</ion-label>
-      <ion-label>{{P.direccion}}</ion-label>
-      <ion-label>{{P.numero}}</ion-label>
-      <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small"><ion-icon name="create-outline"></ion-icon>
-      </ion-button>
-      <ion-button (click)="deletePropiedad(P)" color="danger" size="small"><ion-icon name="trash-outline"></ion-icon></ion-button>
-    </ion-item>
-  
+          <div class="ion-padding" slot="content">
+            <ion-item>
+              <ion-col>
+                <ion-label>Nombre:</ion-label>
+                <ion-label>direccion:</ion-label>
+                <ion-label>Numero:</ion-label>
+              </ion-col>
+              <ion-col>
+                <ion-label>{{P.nombre}}</ion-label>
+                <ion-label>{{P.direccion}}</ion-label>
+                <ion-label>{{P.numero}}</ion-label>
+              </ion-col>
+              <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small"><ion-icon name="create-outline"></ion-icon>
+              </ion-button>
+              <ion-button (click)="deletePropiedad(P)" color="danger" size="small"><ion-icon name="trash-outline"></ion-icon></ion-button>
+            </ion-item>
+          </div>
+        </ion-accordion>
+      </ion-accordion-group>
+    </ion-list> 
     </ion-card-content>
   </ion-card>
 </ion-content>
