--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -40,19 +40,49 @@
                 <ion-label position="floating">Nombre Propiedad</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="casa_ejemplo" type="text" inputmode="text"></ion-input>
               </ion-item>
-              
               <ion-item>
+                <ion-label position="floating">comuna</ion-label>
+                <ion-select [(ngModel)]="newPropiedad.comuna" label="Popover" interface="popover" placeholder="Comuna">
+                  <ion-select-option value="Santiago">Santiago</ion-select-option>
+                  <ion-select-option value="Huechuraba">Huechuraba</ion-select-option>
+                  <ion-select-option value="Independencia">Independencia</ion-select-option>
+                  <ion-select-option value="Quilicura">Quilicura</ion-select-option>
+                  <ion-select-option value="Recoleta">Recoleta</ion-select-option>
+                  <ion-select-option value="Renca">Renca</ion-select-option>
+                  <ion-select-option value="Las Condes">Las Condes</ion-select-option>
+                  <ion-select-option value="Lo Barnechea">Lo Barnechea</ion-select-option>
+                  <ion-select-option value="Providencia">Providencia</ion-select-option>
+                  <ion-select-option value="Vitacura">Vitacura</ion-select-option>
+                  <ion-select-option value="La Reina">La Reina</ion-select-option>
+                  <ion-select-option value="Macul">Macul</ion-select-option>
+                  <ion-select-option value="Conchalí">Conchalí</ion-select-option>
+                </ion-select>
+              </ion-item>
+              <ion-item>
+          
                 <ion-label position="floating">Direccion</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.direccion"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                <ion-col>
+                  <ion-label position="floating">Casa</ion-label>
+                  <ion-label position="floating">Departamento</ion-label>
+                </ion-col>
+                <ion-col>
+                <ion-radio-group value="custom-checked"> 
+                  <ion-radio value="custom" aria-label="Custom checkbox"></ion-radio>
+                  <ion-radio value="custom-checked" aria-label="Custom checkbox that is checked"></ion-radio>
+                </ion-radio-group>
+                
+              </ion-col>
+            </ion-grid>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">numero</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.numero"  placeholder="av. ejemplo"type="number" inputmode="numeric"> </ion-input>
               </ion-item>
-              <ion-item>
-                <ion-label position="floating">comuna</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.comuna"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
-              </ion-item>
+              
               <ion-item>
                 <ion-label position="floating">contacto</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.contacto"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
