--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -18,8 +18,9 @@
 
 <ion-card-title>
   <ion-item>
-  <ion-label slot="end">Nuevo</ion-label>
+ 
   <ion-button shape="round" slot="end" (click)="bntNuevo()" color="secondary">
+    <ion-label slot="end">Nuevo</ion-label>
      <ion-icon name="add"></ion-icon>
    </ion-button>
   </ion-item>
@@ -63,35 +64,35 @@
                 <ion-label position="floating">Direccion</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.direccion"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
               </ion-item>
-              <ion-item>
-                <ion-grid>
-                <ion-col>
-                  <ion-label position="floating">Casa</ion-label>
-                  <ion-label position="floating">Departamento</ion-label>
-                </ion-col>
-                <ion-col>
-                <ion-radio-group value="custom-checked"> 
-                  <ion-radio value="custom" aria-label="Custom checkbox"></ion-radio>
-                  <ion-radio value="custom-checked" aria-label="Custom checkbox that is checked"></ion-radio>
-                </ion-radio-group>
-                
-              </ion-col>
-            </ion-grid>
+                   <ion-item>
+                <ion-label position="floating">Tipo</ion-label>
+                <ion-select [(ngModel)]="newPropiedad.tipo" label="Popover" interface="popover" placeholder="Casa/depto">
+                  <ion-select-option value="casa">Casa</ion-select-option>
+                  <ion-select-option value="depto">Departamento</ion-select-option>
+                </ion-select>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">numero</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.numero"  placeholder="av. ejemplo"type="number" inputmode="numeric"> </ion-input>
+                <ion-input [(ngModel)]="newPropiedad.numero"  placeholder="1233"type="number" inputmode="numeric"> </ion-input>
               </ion-item>
               
               <ion-item>
                 <ion-label position="floating">contacto</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.contacto"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
+                <ion-input [(ngModel)]="newPropiedad.contacto"  placeholder="persona ejemplo" type="text" inputmode="text"> </ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Telefono</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.telefono"  placeholder="av. ejemplo" type="number" inputmode="numeric"> </ion-input>
+                <ion-input [(ngModel)]="newPropiedad.telefono"  placeholder="+569 000 000" type="tel" > </ion-input>
               </ion-item>
-   
+              <ion-item>
+                <ion-label position="floating">
+                  Foto
+                </ion-label>
+                <ion-buttons slot="end">
+                 <ion-icon slot="icon-only" name="images-outline"></ion-icon>
+                 <ion-input  style="display: none" type="file"  accept="image/*"></ion-input>
+                </ion-buttons>
+                    </ion-item>
         <ion-button (click)="guardarPropiedad()" color="secondary" expand="block" shape="round" >Guardar</ion-button>
       </div>
     <!--listas de propiedades Cascada-->
@@ -99,23 +100,31 @@
       <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" lines="none">
         <ion-accordion *ngFor="let P of Propiedades">
           <ion-item slot="header"  color="secondary">
-            
-            <ion-label>{{P.nombre}}</ion-label>
+            <ion-col>
+              <ion-label>{{P.nombre}}</ion-label>
+             
+            </ion-col>
+            <ion-col> 
+             <ion-label> <ion-label>{{P.contacto}}</ion-label></ion-label>
+            </ion-col> 
           </ion-item>
 
           <div class="ion-padding" slot="content">
             <ion-item>
               <ion-col>
-                <ion-label>Nombre:</ion-label>
+                
                 <ion-label>direccion:</ion-label>
                 <ion-label>Numero:</ion-label>
+                <ion-label>Tipo:</ion-label>
               </ion-col>
               <ion-col>
-                <ion-label>{{P.nombre}}</ion-label>
+                
                 <ion-label>{{P.direccion}}</ion-label>
                 <ion-label>{{P.numero}}</ion-label>
+                <ion-label>{{P.tipo}}</ion-label>
               </ion-col>
-              <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small"><ion-icon name="create-outline"></ion-icon>
+              <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small">
+                <ion-icon name="create-outline"></ion-icon>
               </ion-button>
               <ion-button (click)="deletePropiedad(P)" color="danger" size="small"><ion-icon name="trash-outline"></ion-icon></ion-button>
             </ion-item>
