--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -15,28 +15,22 @@
 
   <ion-card>
     <ion-card-header>
-
-<ion-card-title>
-  <ion-item>
- 
-  <ion-button shape="round" slot="end" (click)="bntNuevo()" color="secondary">
+<ion-buttons>
+  <ion-button shape="round"  (click)="bntNuevo()" color="secondary">
     <ion-label slot="end">Nuevo</ion-label>
      <ion-icon name="add"></ion-icon>
    </ion-button>
-  </ion-item>
-  </ion-card-title>
-       
+  </ion-buttons>     
     </ion-card-header>
     <ion-card-content>
        <!--contenedor de agregar-->
    <div *ngIf="enableNewPropiedad">
-    <ion-item >
-     
-      <ion-button shape="round" slot="end" (click)="enableNewPropiedad = false " >
-     <ion-icon name="close"></ion-icon>
   
+     <ion-buttons >
+      <ion-button   (click)="enableNewPropiedad = false " >
+     <ion-icon  slot="end" name="close"></ion-icon>
   </ion-button>
-  </ion-item>
+</ion-buttons>
             <ion-item>
                 <ion-label position="floating">Nombre Propiedad</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="casa_ejemplo" type="text" inputmode="text"></ion-input>
@@ -113,15 +107,17 @@
             <ion-item>
               <ion-col>
                 
-                <ion-label>direccion:</ion-label>
+                <ion-label>Direccion:</ion-label>
                 <ion-label>Numero:</ion-label>
                 <ion-label>Tipo:</ion-label>
+                <ion-label>Telefono:</ion-label>
               </ion-col>
               <ion-col>
                 
                 <ion-label>{{P.direccion}}</ion-label>
                 <ion-label>{{P.numero}}</ion-label>
                 <ion-label>{{P.tipo}}</ion-label>
+                <ion-label>{{P.telefono}}</ion-label>
               </ion-col>
               <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small">
                 <ion-icon name="create-outline"></ion-icon>
