--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -15,22 +15,23 @@
 
   <ion-card>
     <ion-card-header>
-<ion-buttons>
-  <ion-button shape="round"  (click)="bntNuevo()" color="secondary">
-    <ion-label slot="end">Nuevo</ion-label>
-     <ion-icon name="add"></ion-icon>
+
+  <ion-button  (click)="bntNuevo()" color="secondary">
+    <ion-label >Nuevo</ion-label>
+     <ion-icon  name="add"></ion-icon>
    </ion-button>
-  </ion-buttons>     
+    
     </ion-card-header>
     <ion-card-content>
        <!--contenedor de agregar-->
    <div *ngIf="enableNewPropiedad">
-  
-     <ion-buttons >
-      <ion-button   (click)="enableNewPropiedad = false " >
-     <ion-icon  slot="end" name="close"></ion-icon>
+  <ion-item>
+    
+      <ion-button slot="end" (click)="enableNewPropiedad = false " >
+     <ion-icon name="close"></ion-icon>
   </ion-button>
-</ion-buttons>
+
+</ion-item>
             <ion-item>
                 <ion-label position="floating">Nombre Propiedad</ion-label>
                 <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="casa_ejemplo" type="text" inputmode="text"></ion-input>
@@ -90,7 +91,7 @@
         <ion-button (click)="guardarPropiedad()" color="secondary" expand="block" shape="round" >Guardar</ion-button>
       </div>
     <!--listas de propiedades Cascada-->
-       <ion-list [inset]="true" lines="none">
+      
       <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" lines="none">
         <ion-accordion *ngFor="let P of Propiedades">
           <ion-item slot="header"  color="secondary">
@@ -103,8 +104,8 @@
             </ion-col> 
           </ion-item>
 
-          <div class="ion-padding" slot="content">
-            <ion-item>
+          
+            <ion-item class="ion-padding" slot="content">
               <ion-col>
                 
                 <ion-label>Direccion:</ion-label>
@@ -112,22 +113,27 @@
                 <ion-label>Tipo:</ion-label>
                 <ion-label>Telefono:</ion-label>
               </ion-col>
-              <ion-col>
-                
+              <ion-col>     
                 <ion-label>{{P.direccion}}</ion-label>
                 <ion-label>{{P.numero}}</ion-label>
                 <ion-label>{{P.tipo}}</ion-label>
                 <ion-label>{{P.telefono}}</ion-label>
               </ion-col>
+                  <ion-col>
               <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small">
-                <ion-icon name="create-outline"></ion-icon>
+                <ion-icon  name="create-outline"></ion-icon>
               </ion-button>
-              <ion-button (click)="deletePropiedad(P)" color="danger" size="small"><ion-icon name="trash-outline"></ion-icon></ion-button>
+              <ion-button    (click)="deletePropiedad(P)" color="danger" size="small">
+                <ion-icon  name="trash-outline"></ion-icon>
+              </ion-button>
+               </ion-col>
+          
             </ion-item>
-          </div>
+            
+         
         </ion-accordion>
       </ion-accordion-group>
-    </ion-list> 
+  
     </ion-card-content>
   </ion-card>
 </ion-content>
