--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -88,7 +88,7 @@
                     <label for="file-upload">
                     <ion-icon slot="icon-only" name="images-outline"></ion-icon>
                   </label>
-                  <input (change)="nuevaImagen($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
+                  <input (change)="newImage($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
                 </ion-button>
                </ion-buttons>
              </ion-item>
