--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -88,10 +88,14 @@
                     <label for="file-upload">
                     <ion-icon slot="icon-only" name="images-outline"></ion-icon>
                   </label>
-                  <input (change)="newImage($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
+                  <input (change)="newImageUpload($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
                 </ion-button>
                </ion-buttons>
              </ion-item>
+             <ion-item>
+              <img [src]="newPropiedad.foto">
+             </ion-item>
+
         <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " color="secondary" expand="block" shape="round" >Guardar</ion-button>
       </div>
     <!--listas de propiedades Cascada-->
@@ -141,5 +145,5 @@
   
     </ion-card-content>
   </ion-card>
-  <img [src]="newImage">
+
 </ion-content>
