pendiente a revisar tipo de imput

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -30,16 +30,16 @@
               </ion-item>    
               <ion-item>
                 <ion-label position="floating">Correo</ion-label>
-                <ion-input [(ngModel)]="cliente.email"  placeholder="ejemplo@mail.cl" type="text" inputmode="text"> </ion-input>
+                <ion-input [(ngModel)]="cliente.email"  placeholder="ejemplo@mail.cl" type="text"> </ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Contraseña</ion-label>
-                <ion-input [(ngModel)]="cliente.password"  placeholder="********"type="pass" inputmode="numeric"> </ion-input>
+                <ion-input [(ngModel)]="cliente.password"  placeholder="********" type="pass" > </ion-input>
               </ion-item>
               
               <ion-item>
                 <ion-label position="floating">Confirmacion</ion-label>
-                <ion-input [(ngModel)]="cliente.confirmacion"  placeholder="********" type="pass" inputmode="text"> </ion-input>
+                <ion-input [(ngModel)]="cliente.confirmacion"  placeholder="********" type="pass"> </ion-input>
               </ion-item>
              
               <ion-item>
