--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -60,7 +60,9 @@
              </ion-item>
 
         <ion-button (click)="registrarse()" color="secondary" expand="block" shape="round" >registrar</ion-button>
+        <ion-button (click)="ingresar()" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
       </div>  
+      
       <ion-item>
     
         <ion-button slot="end" (click)="salir()">
