--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,6 +13,7 @@
           <div class="flex_div">
               <div>
                   <ion-label class="logo_text">BIENVENIDO A <span>PROPIEDADES</span></ion-label>
+                  <img src="imgs/ambulance.png"/>
                   <ion-label class="small_text">
                       toda la informacion que necesitas al alcance de tus manos
                        
@@ -30,10 +31,10 @@
       <div class="content_div">
           <div class="grid_box">
               <div class="box_div" >
-                  <ion-label>Propiedades</ion-label>
+                  <ion-button  (click)="gopropiedades()" color="secondary" >Propiedades</ion-button>
               </div>
               <div class="box_div" >
-                  <ion-label>Cuentas</ion-label>
+                <ion-button  (click)="gocuentas()" color="secondary" >Cuentas</ion-button>
               </div>
           </div>         
           
