--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </ion-header>
       <ion-content>
         <ion-menu-toggle autoHide="false"> 
-          <ion-item button="true" detail="true" [routerLink]="['/']">
+          <ion-item button="true" detail="true" [routerLink]="['/home']">
           <ion-label>Inicio</ion-label>
           <ion-icon slot="start"  name="home"></ion-icon>
           </ion-item>
