--- a/src/app/pages/bienvenido/bienvenido.page.scss
+++ b/src/app/pages/bienvenido/bienvenido.page.scss
@@ -1,5 +1,7 @@
+
+/// aqui
 ion-content {
-    --background: #9398b6;
+    --background:  #696970;
 //     // #2d2d39
 }
 .main_content_div {
@@ -26,13 +28,13 @@ ion-content {
     }
 
     .simple_lbl {
-        font-size: 14px;
-        color: rgb(46, 41, 41);
+        font-size: 15px;
+        color:  #b6b6c0;
         text-align: center;
     }
 }
 
 ion-button {
-    color: white !important;
+    color: #b6b6c0 !important;
     margin: 0px;
 }
