--- a/src/app/pages/bienvenido/bienvenido.page.html
+++ b/src/app/pages/bienvenido/bienvenido.page.html
@@ -1,25 +1,19 @@
 <ion-content>
     <div class="main_content_div">
-        <ion-slides pager="ios">
-            <ion-slide>
+        
+         
                 <img src="assets/imgs/logo1.png">
-            </ion-slide>
-            <ion-slide>
-                <img src="assets/imgs/logo2.jpg">
-            </ion-slide>
-            <ion-slide>
-                <img src="assets/imgs/logo3.png">
-            </ion-slide>
-        </ion-slides>
-        <ion-label class="bold_lbl">HomeApp</ion-label>
-        <ion-label class="simple_lbl">¡Bienvenido a tu nueva aplicación de gestión inmobiliaria para administrar propiedades y cuentas! </ion-label>
-          <ion-label class="simple_lbl">Estamos encantados de tenerte a bordo y estamos seguros de que esta plataforma será una herramienta valiosa para tus necesidades inmobiliarias.</ion-label>
+          
+      
+        <ion-label class="simple_lbl">¡Bienvenido a tu nueva aplicación de gestión inmobiliaria! </ion-label>
+          <ion-label class="simple_lbl">Estamos encantados de tenerte a bordo y estamos seguros de que esta plataforma será una herramienta valiosa y util.</ion-label>
         </div>
+      
 </ion-content>
 
 <ion-footer class="ion-no-border">
-    <ion-toolbar style="--background: #6e707c;padding: 10px;">
-        <ion-button expand="block" shape="round" (click)="goToLogin()"  >
+    <ion-toolbar style="--background: #58585e;padding: 10px;">
+        <ion-button style="--background: #696970;;"expand="block" shape="round" (click)="goToLogin()" >
             <ion-label>Comenzar</ion-label>
         </ion-button>
     </ion-toolbar>
