--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar color="secondary">
     <ion-buttons slot="start">
-      <ion-button (click)="openMenu()">
-        <ion-icon slot="icon-only" name="menu-sharp"></ion-icon>
-      </ion-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Usuario</ion-title>
   </ion-toolbar>
@@ -11,30 +9,40 @@
 
 <ion-content >
   <!--FORMULARIO DE PERFIL-->
- <div *ngIf="!uid.length">
+  <!--por revisar hacia abajo-->
+  <div *ngIf="!uid.length" class="main_content_div">
+
+   
+   
+    
+      <ion-input [(ngModel)]="cliente.email"  placeholder="mail" type="text"> <ion-icon name="mail"></ion-icon></ion-input>
+  
+      
+        <ion-input [(ngModel)]="cliente.password"  placeholder="Contraseña" type="text" ><ion-icon name="key"></ion-icon> </ion-input>
+
+
+    <ion-button  *ngIf="ingresarEnable" (click)="ingresarEnable = false" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
+    <ion-button  *ngIf="ingresarEnable" (click)="registrarse()" color="secondary" expand="block" shape="round" >registrar</ion-button> 
+    
+
+</div>
+<!--por revisar hacia arriba-->
+ <div >
        <div> 
-              <ion-item *ngIf="!ingresarEnable">
+              <ion-item *ngIf="ingresarEnable">
                   <ion-label position="floating">Nombre</ion-label>
                   <ion-input [(ngModel)]="cliente.nombre"  placeholder="Nombre" type="text" inputmode="text"></ion-input>
                 </ion-item>    
-                <ion-item>
-                  <ion-label position="floating">Correo</ion-label>
-                  <ion-input [(ngModel)]="cliente.email"  placeholder="ejemplo@mail.cl" type="text"> </ion-input>
-                </ion-item>
-                <ion-item>
-                  <ion-label position="floating">Contraseña</ion-label>
-                  <ion-input [(ngModel)]="cliente.password"  placeholder="********" type="pass" > </ion-input>
-                </ion-item>
                 
-                <ion-item *ngIf="!ingresarEnable">
+                <ion-item *ngIf="ingresarEnable">
                   <ion-label position="floating">Confirmacion</ion-label>
                   <ion-input [(ngModel)]="cliente.confirmacion"  placeholder="********" type="pass"> </ion-input>
                 </ion-item>
                
-          <ion-button  *ngIf="!ingresarEnable" (click)="registrarse()" color="secondary" expand="block" shape="round" >registrar</ion-button>   
-          <ion-button  *ngIf="!ingresarEnable" (click)="ingresarEnable = true" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
-          <ion-button  *ngIf="ingresarEnable" (click)="ingresar()" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
-          <ion-button  *ngIf="ingresarEnable" (click)="ingresarEnable = false" color="secondary" expand="block" shape="round" >o registrar</ion-button>
+           
+          
+          <ion-button  *ngIf="!ingresarEnable" (click)="ingresar()" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
+          <ion-button  *ngIf="!ingresarEnable" (click)="ingresarEnable = true" color="secondary" expand="block" shape="round" >o registrar</ion-button>
           
   
         
