checklist estado de casa

--- a/src/app/backend/cuentas/cuentas.component.html
+++ b/src/app/backend/cuentas/cuentas.component.html
@@ -40,16 +40,12 @@
             <ion-select-option value="Gas">Gas</ion-select-option>
           </ion-select>
         </ion-item>
-        <ion-item>
-          <ion-label position="floating">estado</ion-label>
-          <ion-input [(ngModel)]="newCuentas.estado" placeholder="av. ejemplo" type="text" inputmode="text">
-          </ion-input>
-        </ion-item>
+        
         <ion-item>
           <ion-label position="floating">Estado</ion-label>
           <ion-select [(ngModel)]="newCuentas.estado" label="Popover" interface="popover" placeholder="Estado">
             <ion-select-option value="pagado">Pagado</ion-select-option>
-            <ion-select-option value="no pagado">NoPago</ion-select-option>
+            <ion-select-option value="nopago">No Pagado</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item>
