--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="secondary">
+  <ion-toolbar style="--background:   #8e8e94;" >
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -13,44 +13,20 @@
   <div *ngIf="!uid.length" class="main_content_div">
 
    
-   
-    
-      <ion-input [(ngModel)]="cliente.email"  placeholder="mail" type="text"> <ion-icon name="mail"></ion-icon></ion-input>
-  
-      
-        <ion-input [(ngModel)]="cliente.password"  placeholder="Contraseña" type="text" ><ion-icon name="key"></ion-icon> </ion-input>
+      <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.nombre"  placeholder="Nombre" type="text"><ion-icon name="person-circle"></ion-icon></ion-input>
+      <ion-input [(ngModel)]="cliente.email" placeholder="mail" type="text"> <ion-icon name="mail"></ion-icon></ion-input>
+      <ion-input [(ngModel)]="cliente.password" placeholder="Contraseña" type="text" ><ion-icon name="key"></ion-icon> </ion-input>
+      <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.confirmacion" placeholder="Confirmar Contraseña" type="text" ><ion-icon name="key"></ion-icon></ion-input>
 
-
-    <ion-button  *ngIf="ingresarEnable" (click)="ingresarEnable = false" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
-    <ion-button  *ngIf="ingresarEnable" (click)="registrarse()" color="secondary" expand="block" shape="round" >registrar</ion-button> 
+    <ion-button  *ngIf="ingresarEnable"  (click)="ingresarEnable = false" expand="block" >Iniciar</ion-button>
+    <ion-button  *ngIf="ingresarEnable"  (click)="registrarse()"  expand="block" >registrar</ion-button> 
+    <ion-button  *ngIf="!ingresarEnable" (click)="ingresar()"  expand="block" >Iniciar</ion-button>
+    <ion-button  *ngIf="!ingresarEnable" (click)="ingresarEnable = true" expand="block" >o registrar</ion-button>
     
+
 
 </div>
 <!--por revisar hacia arriba-->
- <div >
-       <div> 
-              <ion-item *ngIf="ingresarEnable">
-                  <ion-label position="floating">Nombre</ion-label>
-                  <ion-input [(ngModel)]="cliente.nombre"  placeholder="Nombre" type="text" inputmode="text"></ion-input>
-                </ion-item>    
-                
-                <ion-item *ngIf="ingresarEnable">
-                  <ion-label position="floating">Confirmacion</ion-label>
-                  <ion-input [(ngModel)]="cliente.confirmacion"  placeholder="********" type="pass"> </ion-input>
-                </ion-item>
-               
-           
-          
-          <ion-button  *ngIf="!ingresarEnable" (click)="ingresar()" color="secondary" expand="block" shape="round" >Iniciar</ion-button>
-          <ion-button  *ngIf="!ingresarEnable" (click)="ingresarEnable = true" color="secondary" expand="block" shape="round" >o registrar</ion-button>
-          
-  
-        
-      
-    
-  </div>
-
- </div>
   <div *ngIf="uid.length">
     <div> 
       <ion-item>
