--- a/src/app/pages/bienvenido/bienvenido.page.html
+++ b/src/app/pages/bienvenido/bienvenido.page.html
@@ -12,8 +12,8 @@
 </ion-content>
 
 <ion-footer class="ion-no-border">
-    <ion-toolbar style="--background: #58585e;padding: 10px;">
-        <ion-button style="--background: #696970;;"expand="block" shape="round" (click)="goToLogin()" >
+    <ion-toolbar style="--background: #8e8e94;padding: 10px;">
+        <ion-button style="--background: #7b7b83;"expand="block" shape="round" (click)="goToLogin()" >
             <ion-label>Comenzar</ion-label>
         </ion-button>
     </ion-toolbar>
