--- a/src/app/pages/perfil/perfil.component.scss
+++ b/src/app/pages/perfil/perfil.component.scss
@@ -1,4 +1,8 @@
 
+ion-content {
+    --background:   #7b7b83;
+}
+
 .main_content_div {
     width: 100%;
     padding: 16px;
@@ -6,12 +10,6 @@
     ion-label {
         display: block;
     }
-
-
-
- 
-
-
 
     ion-input {
         background: rgb(148, 137, 145, 0.3);
@@ -28,10 +26,11 @@
     }
 
     ion-button {
+        --background:#8e8e94;
         margin: 0px;
         --border-radius: 5px;
         height: 50px;
-        margin-bottom: 40px;
+      margin-bottom: 10px;
     }
 
  
