--- a/src/app/pages/bienvenido/bienvenido.page.scss
+++ b/src/app/pages/bienvenido/bienvenido.page.scss
@@ -29,12 +29,12 @@ ion-content {
 
     .simple_lbl {
         font-size: 15px;
-        color:  #b6b6c0;
+        color:  #d2d2d6;
         text-align: center;
     }
 }
 
 ion-button {
     color: #b6b6c0 !important;
-    margin: 0px;
+   // margin: 0px;
 }
