--- a/src/app/pages/perfil/perfil.component.scss
+++ b/src/app/pages/perfil/perfil.component.scss
@@ -12,7 +12,7 @@ ion-content {
     }
 
     ion-input {
-        background: rgb(148, 137, 145, 0.3);
+        background: rgba(70, 65, 69, 0.3);
         border-radius: 5px;
         margin-bottom: 20px;
         height: 50px;
@@ -31,6 +31,19 @@ ion-content {
         --border-radius: 5px;
         height: 50px;
       margin-bottom: 10px;
+    }
+    .bold_lbl {
+        font-family: 'semi-bold';
+        font-size: 26px;
+        text-align: center;
+        color: white;
+    }
+
+    .small_lbl {
+        text-align: center;
+        color: white;
+        font-size: 14px;
+        margin-bottom: 30px;
     }
 
  
